<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_num1"
        android:layout_row="0"
        android:layout_columzn="0"
        android:layout_columnSpan="5"
        android:hint="@string/v_input_num1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_num2"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:hint="@string/v_input_num2" />

    <Button
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/button_num0"
        android:layout_column="0"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:layout_row="2" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="1"
        android:id="@+id/button_num1"
        android:layout_weight="1"
        android:layout_row="2"
        android:layout_column="1" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="2"
        android:id="@+id/button_num2"
        android:layout_weight="1"
        android:layout_row="2"
        android:layout_column="2" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="3"
        android:id="@+id/button_num3"
        android:layout_weight="1"
        android:layout_row="2"
        android:layout_column="3" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="4"
        android:id="@+id/button_num4"
        android:layout_weight="1"
        android:layout_row="2"
        android:layout_column="4" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="5"
        android:id="@+id/button_num5"
        android:layout_weight="1"
        android:layout_row="3"
        android:layout_column="0" />
    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="6"
        android:id="@+id/button_num6"
        android:layout_weight="1"
        android:layout_row="3"
        android:layout_column="1" />
    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="7"
        android:id="@+id/button_num7"
        android:layout_weight="1"
        android:layout_row="3"
        android:layout_column="2" />
    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="8"
        android:id="@+id/button_num8"
        android:layout_weight="1"
        android:layout_row="3"
        android:layout_column="3" />
    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="9"
        android:id="@+id/button_num9"
        android:layout_weight="1"
        android:layout_row="3"
        android:layout_column="4" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_add"
        android:id="@+id/button_add"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_margin="5dp"
        android:layout_gravity="fill" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_sub"
        android:id="@+id/button_sub"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_mul"
        android:id="@+id/button_mul"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/v_div"
        android:id="@+id/button_div"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/v_result"
        android:id="@+id/textView_result"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_columnSpan="5"
        android:textSize="30dp"
        android:textColor="#ff1212" />

</GridLayout>